--- a/public/s/index.html
+++ b/public/s/index.html
@@ -53,6 +53,7 @@
 		<script src="/bower_components/underscore/underscore-min.js"></script>
 		<script src="/bower_components/jquery/jquery.min.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="/bower_components/sco.js/js/sco.message.js"></script>
 		<script src="/js/Chart.min.js"></script>
 		<script src="/js/jquery.serializeJSON.min.js"></script>
 		<script src="/js/jquery.qrcode.min.js"></script>
