--- a/public/s/qna.html
+++ b/public/s/qna.html
@@ -1,88 +1,87 @@
 <style>
-         #form-toggle{
-            margin-bottom: 20px;;
-         }
+		 #form-toggle{
+			margin-bottom: 20px;;
+		 }
 </style>
 
 <div id="main-wrapper">
-    <h1>提问管理</h1>
+	<h1>提问管理</h1>
 
-    <form id="form-toggle">
-        <div class="btn-group btn-group-lg">
-            <button type="submit" class="btn btn-default" name="state" value="open">开启</button>
-            <button type="submit" class="btn btn-default" name="state" value="close">关闭</button>
-        </div>
-    </form>
+	<form id="form-toggle">
+		<div class="btn-group btn-group-lg">
+			<button type="submit" class="btn btn-default" name="state" value="open">开启</button>
+			<button type="submit" class="btn btn-default" name="state" value="close">关闭</button>
+		</div>
+	</form>
 
 
-    <table id="table-msglist" class="table table-striped">
-        <thead>
-        <tr>
-            <th>听众昵称</th>
-            <th>提问内容</th>
-        </tr>
-        </thead>
+	<table id="table-msglist" class="table table-striped">
+		<thead>
+		<tr>
+			<th>听众昵称</th>
+			<th>提问内容</th>
+		</tr>
+		</thead>
 
-        <tbody></tbody>
-    </table>
+		<tbody></tbody>
+	</table>
  </div>
 
 
 <script>
-    var $table = $('#table-msglist'),
-            $tbody = $table.find('tbody'),
-            $formToggle=$('#form-toggle');
+	var $table = $('#table-msglist'),
+			$tbody = $table.find('tbody'),
+			$formToggle=$('#form-toggle');
 
-    $.get("/do/s/getqna", function(resObj){
-        var state = resObj['state'];
-        $formToggle.find('[value="'+ state +'"]').addClass('active');
-    });
+	$.get("/do/s/getqna", function(resObj){
+		var state = resObj['state'];
+		$formToggle.find('[value="'+ state +'"]').addClass('active');
+	});
 
-    $formToggle.find('[name="state"]').on('click', function(){
-        $(this).addClass('active').siblings().removeClass('active');
-    });
-    $formToggle.on('submit', function(event){
-        event.preventDefault();
-        $.ajax({
-            type: 'get',
-            data: {
-                state: $formToggle.find('[name="state"].active').val()
-            },
-            url: '/do/s/setqna',
-            success: function(resObj) {
-                alert(resObj['msg']);
-                if (resObj['ok']) {
-                    reloadFrame();
-                }
-            }
-        });
-    });
+	$formToggle.find('[name="state"]').on('click', function(){
+		$(this).addClass('active').siblings().removeClass('active');
+	});
+	$formToggle.on('submit', function(event){
+		event.preventDefault();
+		$.ajax({
+			type: 'get',
+			data: {
+				state: $formToggle.find('[name="state"].active').val()
+			},
+			url: '/do/s/setqna',
+			success: function(resObj) {
+				var ok = resObj['ok'], msg = resObj['msg'];
+				msg && notify(msg, ok);
+				ok && reloadFrame();
+			}
+		});
+	});
 
-    getMessageList();
+	getMessageList();
 
-    function getMessageList() {
-        $.ajax({
-            type: 'get',
-            url: '/do/s/msglist',
-            success: function(resObj) {
-                if (! resObj['ok']) {
-                    return alert('问题列表获取失败');
-                }
-                var msgList = resObj['msgList'],
-                        tbodyHtml = msgList.length ? _.reduce(msgList, function(memo, msg) {
-                            return memo + [
-                                '<tr>',
-                                    '<td>' + msg.audienceName + '</td>',
-                                    '<td>' + msg.text + '</td>',
-                                '</tr>'
-                            ].join('');
-                        }, '') : [
-                            '<tr>',
-                            '<td colspan="2">没有记录</td>',
-                            '</tr>'
-                        ].join('');
-                $tbody.html(tbodyHtml);
-            }
-        });
-    }
+	function getMessageList() {
+		$.ajax({
+			type: 'get',
+			url: '/do/s/msglist',
+			success: function(resObj) {
+				if (! resObj['ok']) {
+					return notify('问题列表获取失败', 0);
+				}
+				var msgList = resObj['msgList'],
+						tbodyHtml = msgList.length ? _.reduce(msgList, function(memo, msg) {
+							return memo + [
+								'<tr>',
+									'<td>' + msg.audienceName + '</td>',
+									'<td>' + msg.text + '</td>',
+								'</tr>'
+							].join('');
+						}, '') : [
+							'<tr>',
+							'<td colspan="2">没有记录</td>',
+							'</tr>'
+						].join('');
+				$tbody.html(tbodyHtml);
+			}
+		});
+	}
 </script>
