--- a/public/s/viewlottery.html
+++ b/public/s/viewlottery.html
@@ -1,69 +1,66 @@
 
 <style>
-    #content {
-        padding-left: 40px;
-    }
-    #content:before {
-        content: '　　';
-    }
+	#content {
+		padding-left: 40px;
+	}
+	#content:before {
+		content: '　　';
+	}
 </style>
 
 <div id="main-wrapper">
-    <h1>抽奖详情</h1>
-    <ul id="list-viewlottery" class="list-group">
-        <li class="list-group-item">
-            <span class="li-label">奖项简述</span>
-            <p id="content"></p>
-        </li>
-        <li class="list-group-item">
-            <span class="li-label">奖项相关</span>
-            <ul id="num"></ul>
-        </li>
-        <li class="list-group-item">
-            <span class="li-label">抽奖结果</span>
-            <canvas id="rsult" width="350" height="350"></canvas>
-        </li>
-        <li class="list-group-item">
-            <button id="btn-start" class="btn btn-primary btn-lg btn-block">
-                开启抽奖
-            </button>
-        </li>
-    </ul>
+	<h1>抽奖详情</h1>
+	<ul id="list-viewlottery" class="list-group">
+		<li class="list-group-item">
+			<span class="li-label">奖项简述</span>
+			<p id="content"></p>
+		</li>
+		<li class="list-group-item">
+			<span class="li-label">奖项相关</span>
+			<ul id="num"></ul>
+		</li>
+		<li class="list-group-item">
+			<span class="li-label">抽奖结果</span>
+			<canvas id="rsult" width="350" height="350"></canvas>
+		</li>
+		<li class="list-group-item">
+			<button id="btn-start" class="btn btn-primary btn-lg btn-block">
+				开启抽奖
+			</button>
+		</li>
+	</ul>
 </div>
 
 <script>
-    var lyid = parseInt(getHashParams()['lyid']),
-            play = !! getHashParams()['play'],
-            $btnStart = $('#btn-start');
+	var lyid = parseInt(getHashParams()['lyid']),
+		play = !! getHashParams()['play'],
+		$btnStart = $('#btn-start');
 
-    $.get('/do/s/viewlottery?lyid=' + lyid, function(resObj) {
-        var ok = resObj['ok'],
-                msg = resObj['msg'];
-        msg && alert(msg);
+	$.get('/do/s/viewlottery?lyid=' + lyid, function(resObj) {
+		var ok = resObj['ok'], msg = resObj['msg'];
+		msg && notify(msg, ok);
+		if (! ok) return window.history.back();
 
-        if (! ok) return window.history.back();
-
-        var lottery = resObj['lottery'],
-                content = lottery['content'],
-                num = lottery['num'],
-                state = lottery['state'],
-                awlist = lottery['awlist']
-        if (state === 'active') {
-            $btnStart.attr('disabled', true);
-            console.log(awlist);
-        } else {
-            $btnStart.on('click', function(){
-                $.get('/do/s/startlottery?lyid=' + lyid, function(resObj){
-                    $btnStart.attr('disabled', true);
-                    var msg = resObj['msg'];
-                    if (msg)
-                        alert(msg);
-                    loadFrame('#/viewlottery?play=1&lyid=' + lyid);
-                });
-            });
-        }
-        $('#content').text(content);
-        $('#num').text('得奖人数　：　'+ num);
-    });
-    
+		var lottery = resObj['lottery'],
+			content = lottery['content'],
+			num = lottery['num'],
+			state = lottery['state'],
+			awlist = lottery['awlist'];
+		if (state === 'active') {
+			$btnStart.attr('disabled', true);
+			console.log(awlist);
+		} else {
+			$btnStart.on('click', function(){
+				$.get('/do/s/startlottery?lyid=' + lyid, function(resObj){
+					$btnStart.attr('disabled', true);
+					var ok = resObj['ok'], msg = resObj['msg'];
+					msg && notify(msg, ok);
+					loadFrame('#/viewlottery?play=1&lyid=' + lyid);
+				});
+			});
+		}
+		$('#content').text(content);
+		$('#num').text('得奖人数　：　'+ num);
+	});
+	
 </script>
